--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <h3>My Projects</h3>
 
         <div class="card-column-main">
-            <div class="card">
+            <div class="card" id="main-card">
 
-            <a href="https://mauritzmaj.github.io/mini-project-HTML_basics/">
+            <a href="https://mauritzmaj.github.io/mini-project-HTML_basics/" >
                 <img src="./images/Project 1.png" class="image">
             </a>
                 <p> 1st project </p>
